# llm-server

./: .dockerignore  .gitignore  Dockerfile.api  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  models.yaml  pyproject.toml
contracts/: pyproject.toml
contracts/src/llm_contracts/: schema.py
contracts/src/llm_contracts/runtime/: eval_run_pointer.py  policy_decision.py
eval/: cli.py  config.py  pyproject.toml  pytest.ini
eval/client/: http_client.py
eval/datasets/: docred_relation_extraction.py  paraloq_json_extraction.py  squad_v2.py  voxel51_scanned_receipts.py
eval/metrics/: docred_relation_scoring.py  extraction_scoring.py  json_schema_extraction_scoring.py  squad_v2_scoring.py
eval/prompts/: docred_prompt.py  paraloq_json_extraction_prompt.py  squad_v2_prompt.py
eval/runners/: base.py  docred_runner.py  extraction_runner.py  paraloq_json_extraction_runner.py  squad_v2_runner.py
eval/scripts/: export_integrations_fixtures.py
eval/src/llm_eval/: cli.py  config.py
eval/src/llm_eval/client/: http_client.py
eval/src/llm_eval/datasets/: paraloq_json_extraction.py  voxel51_scanned_receipts.py
eval/src/llm_eval/io/: run_artifacts.py  run_pointers.py
eval/src/llm_eval/metrics/: common.py  extraction_scoring.py  json_schema_extraction_scoring.py
eval/src/llm_eval/reports/: writer.py
eval/src/llm_eval/runners/: base.py  docred_runner.py  extraction_runner.py  paraloq_json_extraction_runner.py  squad_v2_runner.py
eval/tests/: conftest.py
eval/tests/fakes/: fake_examples.py  fake_http_client.py
eval/tests/integration/: conftest.py  test_extract_sroie_receipt_v1.py  test_live_generate_smoke.py
eval/tests/unit/cli/: test_cli_contract.py  test_cli_debug_print_does_not_crash.py  test_cli_disabled_task.py  test_cli_list_tasks.py  test_cli_persistence.py  test_cli_persistence_edges.py  test_cli_reports_persistence.py
eval/tests/unit/client/: test_http_client.py  test_http_client_protocol_types.py
eval/tests/unit/io/: test_run_artifacts.py
eval/tests/unit/reports/: test_report_writer_contract.py  test_report_writer_examples_and_edges.py  test_report_writer_md_determinism.py
eval/tests/unit/runners/: test_base_deps.py  test_runner_contracts.py  test_runner_empty_dataset.py  test_runner_error_rows.py  test_runner_http_calls.py  test_runner_metrics_sanity.py  test_runner_patchability.py
integrations/: conftest.py  markers.py  pyproject.toml
integrations/data/golden/sroie/: receipt_001.contract.yaml  receipt_001.expected.json  receipt_001.txt
integrations/data/prompt/: generate_cache_key_stable.txt  generate_ping.txt
integrations/data/raw/paraloq_json_extraction/: manifest.jsonl
integrations/data/raw/voxel51_scanned_receipts/: manifest.jsonl
integrations/lib/: assertions.py  concurrency.py  db.py  fixtures.py  http.py  metrics.py
integrations/scripts/: _common.sh  k8s_apply_overlay.sh  k8s_delete_overlay.sh  run_compose_full.sh  run_compose_generate_only.sh  run_host.sh  run_k8s_full.sh  run_k8s_generate_only.sh  wait_http.sh
integrations/test_full/: test_auth_requirements.py  test_extract_repair_behavior.py  test_extract_smoke.py  test_generate_smoke.py  test_golden_contracts_sroie.py  test_health_and_readiness.py  test_models_capabilities_full.py
integrations/test_generate_only/: test_auth_requirements.py  test_extract_is_disabled.py  test_generate_cache_behavior.py  test_generate_concurrency.py  test_generate_smoke.py  test_health_and_readiness.py  test_metrics_prometheus.py  test_models_capabilities_generate_only.py  test_persistence_inference_logs.py
policy/: Dockerfile.policy  pyproject.toml
policy/src/llm_policy/: cli.py  config.py
policy/src/llm_policy/io/: decision_artifacts.py  eval_artifacts.py  models_yaml.py  telemetry.py
policy/src/llm_policy/policies/: base.py  extract_enablement.py  health_gate.py  regressions.py
policy/src/llm_policy/reports/: writer.py
policy/src/llm_policy/types/: decision.py  eval_artifact.py  model_config.py  thresholds.py
policy/src/llm_policy/utils/: fs.py  time.py
policy/tests/: conftest.py
policy/tests/integration/: test_cli_smoke_policy.py
policy/tests/unit/: test_cli_decide_extract.py  test_cli_patch_models.py  test_extract_enablement_policy.py  test_io_decision_artifacts.py  test_models_yaml_patch.py  test_reports_writer.py
server/: alembic.ini  pyproject.toml  pytest.ini
server/migrations/: env.py
server/migrations/versions/: 32dab146fc14_baseline_schema.py  4b11bcee269e_create_core_tables.py  bdd9204b32d2_update_api_keys_schema.py
server/src/llm_server/: cli.py  main.py
server/src/llm_server/api/: admin.py  deps.py  extract.py  health.py
server/src/llm_server/core/: config.py  limits.py  logging.py  metrics.py  redis.py  schema_registry.py
server/src/llm_server/db/: models.py  session.py
server/src/llm_server/io/: policy_decisions.py
server/src/llm_server/reports/: queries.py  writer.py
server/src/llm_server/services/: __init__.py  inference.py  llm.py  llm_api.py  llm_config.py  llm_registry.py
server/tests/: conftest.py  fakes.py
server/tests/integration/: conftest.py  test_admin_load_model_multimodel_integration.py  test_admin_policy_endpoints_integration.py  test_auth_integration.py  test_capability_enforcement_endpoints_integration.py  test_concurrency_integration.py  test_extract_integration.py  test_extract_model_autoselection_integration.py  test_extract_repair_integration.py  test_generate_batch_integration.py  test_generate_cache_integration.py  test_health_integration.py  test_model_load_mode_integration.py  test_models_endpoint_capabilities_integration.py  test_quota_exhaustion_integration.py  test_readyz_modelz_policy_integration.py  test_regressions_integration.py  test_schema_registry_integration.py  test_schemas_detail_integration.py
server/tests/unit/: test_api_resolve_model_unit.py  test_deps_capabilities_unit.py  test_deps_limits_unit.py  test_errors_unit.py  test_extract_parsing_unit.py  test_llm_build_unit.py  test_llm_registry_unit.py  test_policy_decisions_unit.py  test_schema_registry_unit.py
(+146 files in other folders)
