# contracts/pyproject.toml
[project]
name = "llm-contracts"
version = "0.1.0"
description = "Shared schema bindings for internal artifacts (policy_out, eval_out, etc.)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
  "jsonschema>=4.21,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_contracts"]